--- a/Introduction class.ipynb
+++ b/Introduction class.ipynb
@@ -45,13 +45,7 @@
     "#comments single line / multi line comment\n",
     "#Doc strings\n",
     "\n",
-    "#operator\n",
-    "#function\n",
-    "#data structure\n",
-    "#Data type conversion\n",
-    "#print len type input \n",
-    "#formatting\n",
-    "#writing basic python programs"
+    "#operator\n"
    ]
   },
   {
@@ -479,7 +473,10 @@
     "\n",
     "print(4 // 9) #0\n",
     "print(-4 // 9) #-1\n",
-    "print(12 // 5) #2"
+    "print(12 // 5) #2\n",
+    "\n",
+    "#floor divison gives integser output always\n",
+    "#minimum integer near by that "
    ]
   },
   {
@@ -500,6 +497,354 @@
     "\n",
     "print(20 % 9) #2\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#comparison operator\n",
+    "\n",
+    "#< <= => > == !=\n",
+    "#boolean output\n",
+    "\n",
+    "\n",
+    "print(3 != 4)\n",
+    "print(5 == 5.0)\n",
+    "print(10 > 80)\n",
+    "\n",
+    "#assignment operator\n",
+    "\n",
+    "#=\n",
+    "\n",
+    "a = 10\n",
+    "b = 20\n",
+    "\n",
+    "\n",
+    "\n",
+    "#logical operator\n",
+    "\n",
+    "#and  or not\n",
+    "\n",
+    "a = 10\n",
+    "b = 20\n",
+    "\n",
+    "print(a>b and a!=b)\n",
+    "\n",
+    "#And ==> if all the comparisons are True then True otherwise False\n",
+    "#OR  ===> If all of them False then False other wise True\n",
+    "\n",
+    "\n",
+    "#ternary operator\n",
+    "\n",
+    "value = 5\n",
+    "\n",
+    "a = 10 if value > 3 else 20\n",
+    "\n",
+    "print(\"The value of a is: \", a)\n",
+    "\n",
+    "#membership operator\n",
+    "\n",
+    "#in not in\n",
+    "\n",
+    "print(\"on\" in \"python\")\n",
+    "print(\"a\" in \"defg\")\n",
+    "print(10 in [1,2,3,4,10,20])\n",
+    "\n",
+    "print(\"a\" not in \"defg\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of a is:  20\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ternary operator\n",
+    "value = 2\n",
+    "\n",
+    "a = 10 if value > 3 else 20\n",
+    "\n",
+    "print(\"The value of a is: \", a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function\n",
+    "\n",
+    "\n",
+    "#Inbuilt function\n",
+    "#User def function\n",
+    "#recursive function  ===> function call happening inside function defintion\n",
+    "\n",
+    "\n",
+    "\n",
+    "#data structure\n",
+    "\n",
+    "a = 10\n",
+    "b = 20\n",
+    "c = \"python\"\n",
+    "d = True\n",
+    "\n",
+    "Li = [10 ,20, \"python\", True]\n",
+    "\n",
+    "List\n",
+    "Tuple\n",
+    "Dictionary\n",
+    "Set\n",
+    "\n",
+    "\n",
+    "#print len type input \n",
+    "\n",
+    "\n",
+    "\n",
+    "#Data type conversion\n",
+    "\n",
+    "#writing basic python programs\n",
+    "\n",
+    "#formatting\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "110\n",
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 20\n",
+    "\n",
+    "c = a + b\n",
+    "print(c)\n",
+    "\n",
+    "d = 50 \n",
+    "e = 60\n",
+    "\n",
+    "f = d + e\n",
+    "print(f)\n",
+    "\n",
+    "g = 100\n",
+    "h = 200\n",
+    "\n",
+    "i = g + h\n",
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "110\n",
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10\n",
+    "b = 20\n",
+    "d = 50 \n",
+    "e = 60\n",
+    "g = 100\n",
+    "h = 200\n",
+    "\n",
+    "def add(val1, val2):\n",
+    "    return val1 + val2\n",
+    "\n",
+    "print(add(a,b)) #add(10.20)\n",
+    "print(add(d,e))\n",
+    "print(add(g,h))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final = 1\n",
+    "\n",
+    "def factorial(val):\n",
+    "    if val == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        final = val * factorial(val-1) #final = 5 * factorial(4) ##final = 5 * 4 * factorial(3)\n",
+    "    return final\n",
+    "    \n",
+    "    \n",
+    "factorial(5)\n",
+    "\n",
+    "#5 ===> 5 * 4 * 3 * 2 * 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-13-114fbb190000>, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-13-114fbb190000>\"\u001b[1;36m, line \u001b[1;32m11\u001b[0m\n\u001b[1;33m    int a = 10\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print len type input \n",
+    "\n",
+    "#len #length of string or data strucuture\n",
+    "\n",
+    "\n",
+    "print(len(\"python\"))\n",
+    "\n",
+    "\n",
+    "#type\n",
+    "\n",
+    "#inbuilt function\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "10\n",
+      "20.99\n",
+      "10\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print\n",
+    "a = 10\n",
+    "\n",
+    "print(\"hello\")\n",
+    "print(10)\n",
+    "print(20.99)\n",
+    "print(a)\n",
+    "print(\"a\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\t50*20\n",
+      "30^^"
+     ]
+    }
+   ],
+   "source": [
+    "print(10,end=\"\\t\");print(50,end=\"*\")\n",
+    "print(20)\n",
+    "print(30,end=\"^^\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\t20\t30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(10,20,30, sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(10,20,30, sep=\"\\n\")"
    ]
   },
   {
