--- a/Introduction class.ipynb
+++ b/Introduction class.ipynb
@@ -849,6 +849,160 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "<class 'bool'>\n",
+      "False\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Data type conversion\n",
+    "\n",
+    "#int to float/bool/str\n",
+    "#float to int/bool/str\n",
+    "#str to int/float/bool\n",
+    "#bool to int/float/str\n",
+    "\n",
+    "\n",
+    "#int to float\n",
+    "val = 18\n",
+    "\n",
+    "print(type(val))\n",
+    "\n",
+    "val1 = float(val) #any datatype to floating value\n",
+    "\n",
+    "#bool to str conversion\n",
+    "\n",
+    "val = False\n",
+    "\n",
+    "print(type(val))\n",
+    "\n",
+    "val1 = str(val)\n",
+    "\n",
+    "print(val1)\n",
+    "print(type(val1))\n",
+    "\n",
+    "#int()\n",
+    "#bool()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "ram\n",
+      "patna\n",
+      "please enter your city name: chennai\n",
+      "chennai\n",
+      "<class 'str'>\n",
+      "please enter your city name: madurai\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'madurai'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-f075185ad265>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mval3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mval4\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"please enter your city name: \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m#string\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mval4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'madurai'"
+     ]
+    }
+   ],
+   "source": [
+    "#input function #collecting input from user\n",
+    "\n",
+    "val = 10\n",
+    "val1 = \"ram\"\n",
+    "val2 = \"patna\"\n",
+    "\n",
+    "print(val)\n",
+    "print(val1)\n",
+    "print(val2)\n",
+    "\n",
+    "\n",
+    "val3 = input(\"please enter your city name: \") #string \n",
+    "\n",
+    "print(val3)\n",
+    "print(type(val3))\n",
+    "\n",
+    "val4 = int(input(\"please enter your city name: \")) #integer colleciton\n",
+    "\n",
+    "print(val4)\n",
+    "print(type(val4))\n",
+    "\n",
+    "val5 = float(input(\"please enter a floating value\"))\n",
+    "\n",
+    "\n",
+    "\"10\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "input(\"string\")\n",
+    "int(input(\"int\"))\n",
+    "float(input(\"float\"))\n",
+    "bool(input(\"bool\"))\n",
+    "\n",
+    "\n",
+    "str(input()) XXXXXXXXXXXX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter radius float value6.9\n",
+      "149.49540000000002\n"
+     ]
+    }
+   ],
+   "source": [
+    "#writing basic python programs\n",
+    "\n",
+    "\n",
+    "#Area of circle pi*r * r\n",
+    "#perimeter of circle 2 pi r\n",
+    "\n",
+    "\n",
+    "pi = 3.14\n",
+    "radius = float(input(\"please enter radius float value\"))\n",
+    "\n",
+    "Area = pi * radius * radius\n",
+    "\n",
+    "print(Area)\n",
+    "#output int\n",
+    "\n",
+    "\n",
+    "\n",
+    "#formatting\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
