--- a/Introduction class.ipynb
+++ b/Introduction class.ipynb
@@ -1003,6 +1003,134 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n",
+      "10\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 10 \n",
+    "\n",
+    "print(type(a))\n",
+    "\n",
+    "b = str(a)\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "10\n",
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"10\" \n",
+    "\n",
+    "print(type(a))\n",
+    "\n",
+    "b = int(a)\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: 'python'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-71a96688e5c8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: 'python'"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"python\" \n",
+    "\n",
+    "print(type(a))\n",
+    "\n",
+    "b = int(a)\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "print(type(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "please enter radius float value5.6\n",
+      "98.4704\n",
+      "The Area of circle is  98.4704\n",
+      "The Area of circle with radius 5.6 is 98.4704\n",
+      "The Area of circle with radius 5.6 is 98.4704\n",
+      "The Area of circle is 98.4704 with radius 5.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#formatting:\n",
+    "\n",
+    "\n",
+    "pi = 3.14\n",
+    "radius = float(input(\"please enter radius float value\"))\n",
+    "Area = pi * radius * radius\n",
+    "\n",
+    "print(Area)\n",
+    "\n",
+    "print(\"The Area of circle is \",Area)\n",
+    "\n",
+    "print(f\"The Area of circle with radius {radius} is {Area}\")\n",
+    "\n",
+    "print(\"The Area of circle with radius {} is {}\".format(radius,Area))\n",
+    "\n",
+    "print(\"The Area of circle is {1} with radius {0}\".format(radius,Area))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
