--- a/String indexing and Slicing.ipynb
+++ b/String indexing and Slicing.ipynb
@@ -148,6 +148,161 @@
     "computer_science\n",
     "empty\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-aa0588b6c327>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-aa0588b6c327>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    [:]\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"python\"\n",
+    "\n",
+    "[:]     ===> \"python\"\n",
+    "[3:5]   ==> ho\n",
+    "[:5]    ===> pytho\n",
+    "[3:]    ===> hon\n",
+    "[3:100]  ==> hon\n",
+    "[-5:5]  ==> ytho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "puter_s\n",
+      "ptrs\n",
+      "pes\n",
+      "ter_sc\n",
+      "trs\n",
+      "tc\n",
+      "cu\n",
+      "t_ic\n",
+      "cmue_cec\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Type 2\n",
+    "\n",
+    "##starting index / ending index (both are available or both are not available or any one available)\n",
+    "#index interval should be there and should be positive\n",
+    "#can extract only in forward manner\n",
+    "\n",
+    "\n",
+    "val = \"computer_science\"\n",
+    "\n",
+    "print(val[3:10:1])\n",
+    "print(val[3:10:2])\n",
+    "print(val[3:10:3])\n",
+    "print(val[5:-5:1])\n",
+    "print(val[5:-5:2])\n",
+    "print(val[5:-5:5])\n",
+    "print(val[:8:4])\n",
+    "print(val[5::3])\n",
+    "print(val[::2])\n",
+    "print(val[12:5:3])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "puter_s\n",
+    "ptrs\n",
+    "pes\n",
+    "ter_sc\n",
+    "trs\n",
+    "tc\n",
+    "cu\n",
+    "t_ic\n",
+    "cmue_cec\n",
+    "empty\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mue_ce\n",
+      "\n",
+      "\n",
+      "cec_eu\n",
+      "pese\n",
+      "\n",
+      "\n",
+      "ncru\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Type 3;\n",
+    "\n",
+    "\n",
+    "#all the values should be there ==>  starting index ending index interval\n",
+    "#it can be positive negative\n",
+    "'''\n",
+    "FWD (start to end) + Pos(index)  ===> output\n",
+    "REV (start to end) + Neg(index)  ===> output\n",
+    "\n",
+    "\n",
+    "FWD (start to end) + Neg(index)  ===> empty\n",
+    "REV (start to end) + Pos(index)  ===> empty\n",
+    "'''\n",
+    "\n",
+    "a = \"computer_science\"\n",
+    "\n",
+    "print(a[2:-2:2])\n",
+    "print(a[2:-2:-2])\n",
+    "print(a[-2:2:2])\n",
+    "print(a[-2:2:-2])\n",
+    "print(a[3:-3:3])\n",
+    "print(a[3:-3:-3])\n",
+    "print(a[-3:3:3])\n",
+    "print(a[-3:3:-3])\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mue_ce\n",
+    "empty\n",
+    "empty\n",
+    "cec_eu\n",
+    "pese\n",
+    "empty\n",
+    "empty\n",
+    "ncru"
+   ]
   }
  ],
  "metadata": {
