--- a/String indexing and Slicing.ipynb
+++ b/String indexing and Slicing.ipynb
@@ -303,6 +303,103 @@
     "empty\n",
     "ncru"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "esee\n",
+      "epc\n",
+      "cpe\n",
+      "ees\n",
+      "mre\n",
+      "ctc\n",
+      "comput\n",
+      "enis\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Type4 and Type 5 (most of the cases output will be there, chances of empty is very rare)\n",
+    "\n",
+    "#it can be positive negative\n",
+    "'''\n",
+    "FWD (start to end) + Pos(index)  ===> output\n",
+    "REV (start to end) + Neg(index)  ===> output\n",
+    "\n",
+    "\n",
+    "FWD (start to end) + Neg(index)  ===> empty\n",
+    "REV (start to end) + Pos(index)  ===> empty\n",
+    "'''\n",
+    "\n",
+    "a = \"computer_science\"\n",
+    "\n",
+    "print(a[6::3])\n",
+    "print(a[6::-3])\n",
+    "print(a[:8:3])\n",
+    "print(a[:8:-3])\n",
+    "print(a[2::5])\n",
+    "print(a[10::-5])\n",
+    "print(a[:6:1])\n",
+    "print(a[:7:-2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "esee\n",
+    "epc\n",
+    "cpe\n",
+    "ees\n",
+    "mre\n",
+    "ctc\n",
+    "comput\n",
+    "enis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computer_science\n",
+      "cmue_cec\n",
+      "cpesee\n",
+      "ecneics_retupmoc\n",
+      "enisrtpo\n",
+      "eesepc\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"computer_science\"\n",
+    "\n",
+    "print(a[::1])\n",
+    "print(a[::2])\n",
+    "print(a[::3])\n",
+    "print(a[::-1])\n",
+    "print(a[::-2])\n",
+    "print(a[::-3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
