--- a/Data structures with python.ipynb
+++ b/Data structures with python.ipynb
@@ -971,6 +971,494 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "<class 'set'>\n",
+      "{}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#empty set creation\n",
+    "\n",
+    "set1 = set()\n",
+    "\n",
+    "print(set1)\n",
+    "print(type(set1))\n",
+    "\n",
+    "set1 = {} #not possible\n",
+    "\n",
+    "print(set1)\n",
+    "print(type(set1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{10, 11, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#add\n",
+    "\n",
+    "set1 = {10,11}\n",
+    "\n",
+    "set1.add(5)\n",
+    "\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{5, 10, 11, 15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#update\n",
+    "\n",
+    "set1 = {10,11}\n",
+    "\n",
+    "set2 = {5,10,15}\n",
+    "\n",
+    "set1.update(set2)\n",
+    "\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{11}\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "5",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-f49fe377615c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mset1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mset1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 5"
+     ]
+    }
+   ],
+   "source": [
+    "#remove\n",
+    "\n",
+    "set1 = {10,11}\n",
+    "set1.remove(10)\n",
+    "print(set1)\n",
+    "set1.remove(5)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{11}\n",
+      "{11}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#discard\n",
+    "\n",
+    "set1 = {10,11}\n",
+    "set1.discard(10)\n",
+    "print(set1)\n",
+    "set1.discard(5)\n",
+    "print(set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{11}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pop #ramdom element removal\n",
+    "\n",
+    "set1 = {10,11}\n",
+    "\n",
+    "set1.pop()\n",
+    "\n",
+    "print(set1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{10, 11}\n",
+      "set()\n",
+      "{10, 11}\n",
+      "2666396115240\n",
+      "2666396118152\n"
+     ]
+    }
+   ],
+   "source": [
+    "#clear / copy\n",
+    "\n",
+    "set1 = {10,11}\n",
+    "\n",
+    "set2 = set1.copy()\n",
+    "\n",
+    "print(set2)\n",
+    "\n",
+    "set1.clear()\n",
+    "\n",
+    "print(set1)\n",
+    "print(set2)\n",
+    "print(id(set1))\n",
+    "print(id(set2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{10, 11}\n",
+      "set()\n",
+      "set()\n",
+      "2666396116808\n",
+      "2666396116808\n"
+     ]
+    }
+   ],
+   "source": [
+    "set1 = {10,11}\n",
+    "\n",
+    "set2 = set1 #shallow\n",
+    "\n",
+    "print(set2)\n",
+    "\n",
+    "set1.clear()\n",
+    "\n",
+    "print(set1)\n",
+    "print(set2)\n",
+    "\n",
+    "print(id(set1))\n",
+    "print(id(set2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "49\n",
+      "11\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sum/len/min/max\n",
+    "\n",
+    "set1 = {5,6,7,8,10,2,11}\n",
+    "\n",
+    "print(min(set1))\n",
+    "print(sum(set1))\n",
+    "print(max(set1))\n",
+    "print(len(set1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#del\n",
+    "\n",
+    "set1 = {5,6,7,8,10,2,11}\n",
+    "\n",
+    "del set1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 11}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#union\n",
+    "\n",
+    "a = {4,5,6,7,8,10}\n",
+    "b = {1,2,3,4,5,0,11}\n",
+    "\n",
+    "c = a.union(b)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#intersection\n",
+    "\n",
+    "a = {4,5,6,7,8,10}\n",
+    "b = {1,2,3,4,5,0,11}\n",
+    "\n",
+    "c = a.intersection(b)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#intersection update\n",
+    "\n",
+    "a = {4,5,6,7,8,10}\n",
+    "b = {1,2,3,4,5,0,11}\n",
+    "\n",
+    "a.intersection_update(b)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{8, 10, 6, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#difference\n",
+    "\n",
+    "a = {4,5,6,7,8,10}\n",
+    "b = {1,2,3,4,5,0,11}\n",
+    "\n",
+    "c = a.difference(b)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{6, 7, 8, 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#difference update\n",
+    "\n",
+    "a = {4,5,6,7,8,10}\n",
+    "b = {1,2,3,4,5,0,11}\n",
+    "\n",
+    "a.difference_update(b)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 6, 7, 8, 10, 11}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#symmetric difference\n",
+    "\n",
+    "a = {4,5,6,7,8,10}\n",
+    "b = {1,2,3,4,5,0,11}\n",
+    "\n",
+    "c = a.symmetric_difference(b)\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 6, 7, 8, 10, 11}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#symmetric difference update\n",
+    "\n",
+    "a = {4,5,6,7,8,10}\n",
+    "b = {1,2,3,4,5,0,11}\n",
+    "\n",
+    "a.symmetric_difference_update(b)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#issubset/issuperset\n",
+    "\n",
+    "a = {3,4,5,6}\n",
+    "b = {0,1,2}\n",
+    "c = {5,6}\n",
+    "\n",
+    "print(a.issuperset(b))\n",
+    "print(a.issuperset(c))\n",
+    "print(b.issubset(c))\n",
+    "print(c.issubset(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#isdisjoint\n",
+    "\n",
+    "a = {3,4,5,6}\n",
+    "b = {0,1,2}\n",
+    "c = {5,6}\n",
+    "\n",
+    "print(a.isdisjoint(b))\n",
+    "print(a.isdisjoint(c))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
