--- a/Data structures with python.ipynb
+++ b/Data structures with python.ipynb
@@ -1467,16 +1467,421 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'python', 2: 'cpp', -1: 'groovy', 5: 'java', 'c': 'Core'}\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "#{key:value}\n",
     "##no indexing or no ordering (key == index)\n",
     "#no duplicate key but duplicate values are possible\n",
     "#no concatenation\n",
     "#mutable\n",
-    "\n"
+    "\n",
+    "a = {1:\"python\", 2:\"cpp\", -1:\"groovy\", 5:\"java\", \"c\":\"Core\"}\n",
+    "\n",
+    "print(a)\n",
+    "print(type(a))\n",
+    "\n",
+    "#key:\n",
+    "\n",
+    "integer\n",
+    "Float\n",
+    "string\n",
+    "bool (not in same way)\n",
+    "\n",
+    "#Value:\n",
+    "\n",
+    "integer\n",
+    "float\n",
+    "string\n",
+    "bool\n",
+    "List\n",
+    "Set\n",
+    "Tuple\n",
+    "Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-f8e5d3544d4c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1:\"python\", 2:\"cpp\", -1:\"groovy\", 5:\"java\", \"c\":\"Core\"}\n",
+    "\n",
+    "print(a[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "program\n",
+      "Core\n",
+      "{1: 'program', 2: 'cpp', -1: 'groovy', 5: 'java', 'c': 'Core', 3: 'groovy'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1:\"python\", 2:\"cpp\", -1:\"groovy\", 5:\"java\", \"c\":\"Core\", 1:\"program\",3:\"groovy\"}\n",
+    "\n",
+    "print(a[1])\n",
+    "print(a.get(\"c\"))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'dict' and 'dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-4286d2d8ff99>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m\"go\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m7\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m\"gg\"\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'dict' and 'dict'"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1:\"python\", 2:\"cpp\", -1:\"groovy\", 5:\"java\", \"c\":\"Core\", 1:\"program\",3:\"groovy\"}\n",
+    "\n",
+    "\n",
+    "b = {3:\"go\", 7:\"gg\"}\n",
+    "\n",
+    "print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'program', 2: 'cpp', -1: 'groovy', 5: 'java', 'c': 'Core', 3: 'groovy', 'typescript': 'plugin'}\n",
+      "{1: 'program', 2: 'cpp', -1: 'groovy', 5: 'javascript', 'c': 'Core', 3: 'groovy', 'typescript': 'plugin'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#add one element / replace\n",
+    "\n",
+    "a = {1:\"python\", 2:\"cpp\", -1:\"groovy\", 5:\"java\", \"c\":\"Core\", 1:\"program\",3:\"groovy\"}\n",
+    "\n",
+    "\n",
+    "a[\"typescript\"] = \"plugin\" #addition\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "a[5] = \"javascript\" #replacement\n",
+    "\n",
+    "print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'program', 2: 'cpp', -1: 'groovy', 5: 'java', 'c': 'Core', 3: 'go', 7: 'gg'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1:\"python\", 2:\"cpp\", -1:\"groovy\", 5:\"java\", \"c\":\"Core\", 1:\"program\",3:\"groovy\"}\n",
+    "\n",
+    "\n",
+    "b = {3:\"go\", 7:\"gg\"}\n",
+    "\n",
+    "a.update(b)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'program', 2: 'cpp', -1: 'groovy', 5: 'java', 'c': 'Core'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#removal\n",
+    "\n",
+    "a = {1:\"python\", 2:\"cpp\", -1:\"groovy\", 5:\"java\", \"c\":\"Core\", 1:\"program\",3:\"groovy\"}\n",
+    "\n",
+    "a.pop(3)\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'program', 2: 'cpp', -1: 'groovy', 5: 'java', 'c': 'Core'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1:\"python\", 2:\"cpp\", -1:\"groovy\", 5:\"java\", \"c\":\"Core\", 1:\"program\",3:\"groovy\"}\n",
+    "\n",
+    "a.popitem() #remove randomly\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys([1, 2, -1, 5, 'c', 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1:\"python\", 2:\"cpp\", -1:\"groovy\", 5:\"java\", \"c\":\"Core\", 1:\"program\",3:\"groovy\"}\n",
+    "\n",
+    "\n",
+    "print(a.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values(['program', 'cpp', 'groovy', 'java', 'Core', 'groovy'])\n",
+      "dict_items([(1, 'program'), (2, 'cpp'), (-1, 'groovy'), (5, 'java'), ('c', 'Core'), (3, 'groovy')])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1:\"python\", 2:\"cpp\", -1:\"groovy\", 5:\"java\", \"c\":\"Core\", 1:\"program\",3:\"groovy\"}\n",
+    "\n",
+    "\n",
+    "print(a.values())\n",
+    "print(a.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "6\n",
+      "-1\n",
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1:\"python\", 2:\"cpp\", -1:\"groovy\", 5:\"java\", 90:\"Core\", 1:\"program\",3:\"groovy\"}\n",
+    "\n",
+    "\n",
+    "print(sum(a))\n",
+    "print(len(a))\n",
+    "print(min(a))\n",
+    "print(max(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'program', 2: 'cpp', -1: 'groovy', 5: 'java', 90: 'Core', 3: 'groovy'}\n",
+      "{1: 'program', 2: 'cpp', -1: 'groovy', 5: 'java', 90: 'Core', 3: 'groovy'}\n",
+      "{}\n",
+      "{1: 'program', 2: 'cpp', -1: 'groovy', 5: 'java', 90: 'Core', 3: 'groovy'}\n",
+      "{2: 'cpp', -1: 'groovy', 5: 'java', 90: 'Core', 3: 'groovy'}\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'b' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-26-132150aad58d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mdel\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'b' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#clear / copy / del\n",
+    "\n",
+    "a = {1:\"python\", 2:\"cpp\", -1:\"groovy\", 5:\"java\", 90:\"Core\", 1:\"program\",3:\"groovy\"}\n",
+    "\n",
+    "b = a.copy()\n",
+    "\n",
+    "print(a)\n",
+    "print(b)\n",
+    "\n",
+    "a.clear()\n",
+    "\n",
+    "print(a)\n",
+    "print(b)\n",
+    "\n",
+    "del b[1]\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "del b\n",
+    "\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data structure conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 3, 4, 5, 6, 7, 10}\n",
+      "{4: 10, 5: 3, 6: 4, 7: 5, 3: 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [4,5,6,7,3,3,4,5,2,10,2]\n",
+    "\n",
+    "b = [5,6,7,8,9,3,2,1,1,2,4,10] \n",
+    "\n",
+    "b = set(a)\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "#tuple\n",
+    "#list\n",
+    "\n",
+    "#dictionary\n",
+    "\n",
+    "c = dict(zip(a,b))\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4: 10, 5: 11, 6: 12, 7: 13}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [4,5,6,7]\n",
+    "\n",
+    "b = [10,11,12,13] \n",
+    "\n",
+    "c = dict(zip(a,b))\n",
+    "\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 5), (5, 6), (6, 7), (7, 8), (3, 9), (3, 3), (4, 2), (5, 1), (2, 1), (10, 2), (2, 4)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [4,5,6,7,3,3,4,5,2,10,2]\n",
+    "\n",
+    "b = [5,6,7,8,9,3,2,1,1,2,4,10] \n",
+    "c = list(zip(a,b))\n",
+    "\n",
+    "print(c)"
    ]
   },
   {
@@ -1495,16 +1900,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "on\n",
+      "py\n",
+      "[6, 7, 10, [999]]\n",
+      "[45, 6, 7, 10, [999]]\n",
+      "7\n",
+      "999\n",
+      "[999]\n"
+     ]
+    }
+   ],
    "source": [
-    "## Data structure conversion"
+    "a = [4,5,6,7,10,\"python\",\"cpp\",[45,6,7,10,[999]]]\n",
+    "\n",
+    "print(a[5][-2:])\n",
+    "print(a[5][0:2])\n",
+    "print(a[-1][1:])\n",
+    "print(a[-1])\n",
+    "print(a[-1][2])\n",
+    "print(a[-1][-1][-1])\n",
+    "print(a[-1][-1])\n",
+    "\n",
+    "#on\n",
+    "#py\n",
+    "#pp\n",
+    "\n"
    ]
   },
   {
