--- a/Conditional Statements.ipynb
+++ b/Conditional Statements.ipynb
@@ -381,6 +381,25 @@
     "Other wise ===> Grade D\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Leap year\n",
+    "=============\n",
+    "\n",
+    "\n",
+    "century year :\n",
+    "    divisible by 400 then leap\n",
+    "    otherwise not a leap year\n",
+    "\n",
+    "non century year:\n",
+    "    if divisible by 4 ==> leap\n",
+    "    else: not a leap year"
+   ]
   }
  ],
  "metadata": {
